--- a/public/view/admin.html
+++ b/public/view/admin.html
@@ -17,24 +17,24 @@
     <nav class="navbar navbar-expand navbar-dark bg-primary">
         <a class="sidebar-toggle mr-3" href="#"><i class="fa fa-bars"></i></a>
         <a class="navbar-brand" href="#">ENDO - Intel</a>
+        <div class="navbar-collapse collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a href="#" id="dd_user" class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>  <%= name %></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd_user">
+                        <a href="#" class="dropdown-item">Logout</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </nav>
+
 
     <div class="d-flex">
         <div class="sidebar sidebar-dark bg-dark">
             <ul class="list-unstyled">
-                <li><a href="#"><i class="fa fa-fw fa-link"></i> Menu Item</a></li>
-                <li>
-                    <a href="#sm_expand_1" data-toggle="collapse">
-                        <i class="fa fa-fw fa-link"></i> Expandable Menu Item
-                    </a>
-                    <ul id="sm_expand_1" class="list-unstyled collapse">
-                        <li><a href="#">Submenu Item</a></li>
-                        <li><a href="#">Submenu Item</a></li>
-                    </ul>
-                </li>
-                <li><a href="#"><i class="fa fa-fw fa-link"></i> Menu Item</a></li>
-                <li><a href="#"><i class="fa fa-fw fa-link"></i> Menu Item</a></li>
-                <li><a href="#"><i class="fa fa-fw fa-link"></i> Menu Item</a></li>
+                <li><a href="/admin"><i class="fa fa-fw fa-users"></i> Member Approval</a></li>
+                <li><a href="/intel"><i class="fa fa-fw fa-info"></i> Intel</a></li>
             </ul>
         </div>
 
@@ -127,6 +127,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
