--- a/public/view/admin.html
+++ b/public/view/admin.html
@@ -77,7 +77,7 @@
                                 <% } else { %>
                                 <td></td>
                                 <% } %>
-                                <td class="dt-center"><button id='<%= users[i].ID %>' data-toggle="modal" onclick="modalrole('<%= users[i].Name %>', '<%= users[i].ID %>')" data-target="#exampleModalCenter" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit Member</button></td>
+                                <td class="dt-center"><button id='<%= users[i].ID %>' data-toggle="modal" onclick="modalrole('<%= users[i].Name %>', '<%= users[i].ID %>', '<%= users[i].role %>')" data-target="#exampleModalCenter" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit Member</button></td>
                             </tr>
                             <% } %>
                         </tbody>
@@ -141,9 +141,10 @@
 <script src="js/datatables.min.js"></script>
 <script type="text/javascript">
 
-  function modalrole(name, id){
+  function modalrole(name, id, role){
     $('#exampleModalCenterTitle').text(name);
     $('#IDmodal').val(id);
+    $('select').val(role)
 }
 $(document).ready( function () {
 
