--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -34,7 +34,9 @@
    <div class="d-flex">
         <div class="sidebar sidebar-dark bg-dark">
             <ul class="list-unstyled">
+                <% if (role >= 2) { %>
                 <li><a href="/admin"><i class="fa fa-fw fa-users"></i> Member Approval</a></li>
+                <% } %>
                 <li><a href="/intel"><i class="fa fa-fw fa-info"></i> Intel</a></li>
             </ul>
         </div>
@@ -52,8 +54,10 @@
                                 <th>FC</th>
                                 <th>Doctrine</th>
                                 <th>Comment</th>
+                                <% if (role >= 2) { %>
                                 <th>By</th>
                                 <th>Action</th>
+                                 <% } %>
                             </tr>
                         </thead>
                        
@@ -65,9 +69,11 @@
                                     <td><%= intel[i].FC %></td>
                                     <td><%= intel[i].Doctrine %></td>
                                     <td><%= intel[i].Comment %></td>
+                                     <% if (role >= 2) { %>
                                     <td><%= intel[i].Author_Name %></td>
                                      <td class="dt-center"><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit Intel</button></td>
                                     </tr>
+                                    <% } %>
                             <% } %>
                         <tbody>
 
