add name on .env

--- a/public/view/admin.html
+++ b/public/view/admin.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="css/datatables.min.css">
     <link rel="stylesheet" href="css/table.css">
 
-    <title>ENDO - Intel</title>
+    <title><%= sname %></title>
 </head>
 <body class="bg-light">
 
     <nav class="navbar navbar-expand navbar-dark bg-primary">
         <a class="sidebar-toggle mr-3" href="#"><i class="fa fa-bars"></i></a>
-        <a class="navbar-brand" href="#">ENDO - Intel</a>
+        <a class="navbar-brand" href="#"><%= sname %></a>
         <div class="navbar-collapse collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
