--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="css/bootstrap-material-datetimepicker.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>ENDO - Intel</title>
+    <title><%= sname %></title>
 </head>
 <body class="bg-light">
 
     <nav class="navbar navbar-expand navbar-dark bg-primary">
         <a class="sidebar-toggle mr-3" href="#"><i class="fa fa-bars"></i></a>
-        <a class="navbar-brand" href="#">ENDO - Intel</a>
+        <a class="navbar-brand" href="#"><%= sname %></a>
         <div class="navbar-collapse collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
