--- a/public/view/admin.html
+++ b/public/view/admin.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="content p-4">
-            <h2 class="mb-4">Member Approval</h2>
+            <h2 class="mb-4">Members Approvals</h2>
             <div class="card mb-4">
                 <div class="card-body">
                     <table id="table_id" class="display">
@@ -54,6 +54,8 @@
                         </thead>
                         <tbody>
                             <% for(var i=0; i<users.length; i++) { %>
+                            <!-- /!\ non teste #faitdans le train -->
+                             <% if (role == 3 || users[i].handler == name || !users[i].role) {%>
                             <tr>
                                 <td><%= users[i].ID %></td>
                                 <td><%= users[i].Name %></td>
@@ -79,6 +81,7 @@
                                 <% } %>
                                 <td class="dt-center"><button id='<%= users[i].ID %>' data-toggle="modal" onclick="modalrole('<%= users[i].Name %>', '<%= users[i].ID %>', '<%= users[i].role %>')" data-target="#exampleModalCenter" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit Member</button></td>
                             </tr>
+                             <% } %>
                             <% } %>
                         </tbody>
                     </table>
@@ -109,48 +112,48 @@
                                             <label for="handler">Handler</label>
                                             <select class="form-control" id="handler" name="handler">
                                                 <option value=" "></option>
-                                               <% for(var i=0; i<users.length; i++) { %>
-                                               <option value="<%= users[i].Name %>"><%= users[i].Name %></option>
-                                               <% } %>
-                                           </select>
-                                       </div>
-                                       <div style="display: none" class="form-group">
-                                        <input type="text" class="form-control" id="IDmodal" name="ID">
-                                    </div>
+                                                <% for(var i=0; i<users.length; i++) { %>
+                                                <option value="<%= users[i].Name %>"><%= users[i].Name %></option>
+                                                <% } %>
+                                            </select>
+                                        </div>
+                                        <div style="display: none" class="form-group">
+                                            <input type="text" class="form-control" id="IDmodal" name="ID">
+                                        </div>
 
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button form="modalf" type="submit" class="btn btn-primary">Save changes</button>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button form="modalf" type="submit" class="btn btn-primary">Save changes</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/bootadmin.min.js"></script>
-<script src="js/datatables.min.js"></script>
-<script type="text/javascript">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootadmin.min.js"></script>
+    <script src="js/datatables.min.js"></script>
+    <script type="text/javascript">
 
-  function modalrole(name, id, role){
-    $('#exampleModalCenterTitle').text(name);
-    $('#IDmodal').val(id);
-    $('select').val(role)
-}
-$(document).ready( function () {
+      function modalrole(name, id, role){
+        $('#exampleModalCenterTitle').text(name);
+        $('#IDmodal').val(id);
+        $('select').val(role)
+    }
+    $(document).ready( function () {
 
-    $('#table_id').DataTable();
+        $('#table_id').DataTable();
 
-} );
+    } );
 </script>
 
 </body>
