test add op for admin handler and fc

--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -38,6 +38,7 @@
                 <li><a href="/admin"><i class="fa fa-fw fa-users"></i> Member Approval</a></li>
                 <% } %>
                 <li><a href="/intel"><i class="fa fa-fw fa-info"></i> Intel</a></li>
+                <li><a href="#"   data-toggle="modal" data-target="#addop"><i  data-toggle="modal" data-target="#addop" class="fa fa-fw fa-space-shuttle"></i> Add OP</a></li>
             </ul>
         </div>
 
@@ -84,7 +85,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="addop" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
