--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -85,7 +85,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addop" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <!-- modal add -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -130,7 +131,7 @@
 
                         <div class="form-group">
                             <label for="Doctrine">Doctrine</label>
-                            <input type="text" class="form-control" id="FC" name="Doctrine" placeholder="Doctrine">
+                            <input type="text" class="form-control" id="Doctrine" name="Doctrine" placeholder="Doctrine">
                         </div>
 
                         <div class="form-group mb-0">
@@ -140,6 +141,10 @@
 
                         <div style="display: none" class="form-group">
                             <input type="text" class="form-control" id="Author" name="Author" value="<%= id %>">
+                        </div>
+
+                           <div style="display: none" class="form-group">
+                            <input type="text" class="form-control" id="Author_Name" name="Author_Name" value="<%= name %>">
                         </div>
 
                     </form>
