--- a/public/view/submitf.html
+++ b/public/view/submitf.html
@@ -64,7 +64,7 @@
                                     <td><%= intel[i].FC %></td>
                                     <td><%= intel[i].Doctrine %></td>
                                     <td><%= intel[i].Comment %></td>
-                                    <td class="dt-center"><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit Intel</button></td>
+                                    <td class="dt-center"><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit Intel</button><button type="button" class="btn btn-outline-danger">Danger</button></td>
                                     </tr>
                             <% } %>
                         <tbody>
