--- a/public/view/submitf.html
+++ b/public/view/submitf.html
@@ -64,7 +64,7 @@
                             <td><%= intel[i].FC %></td>
                             <td><%= intel[i].Doctrine %></td>
                             <td><%= intel[i].Comment %></td>
-                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
+                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
                         </tr>
                         <% } %>
                         <tbody>
