--- a/public/view/submitf.html
+++ b/public/view/submitf.html
@@ -57,7 +57,7 @@
                         </thead>
 
                         <% for(var i=0; i<intel.length; i++) { %>
-                        <tr> 
+                        <tr id='<%= intel[i]._id %>'> 
                             <td><%= intel[i].Group %></td>
                             <td><%= intel[i].Type %></td>
                             <td><%= intel[i].Date %></td>
