--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -61,8 +61,11 @@
                                 <% } %>
                             </tr>
                         </thead>
-                        
-                        <% for(var i=0; i<intel.length; i++) { %>
+
+                        <% for(var i=0; i<intel.length; i++) { 
+                            if (!intel[i].deleted) {
+                        %>
+
                          <tr id='<%= intel[i]._id %>'> 
                             <td><%= intel[i].Group %></td>
                             <td><%= intel[i].Type %></td>
@@ -73,6 +76,7 @@
                             <% if (role == 3) { %>
                             <td><%= intel[i].Author_Name %></td>
                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
+                            <% } %>
                         </tr>
                         <% } %>
                         <% } %>
