--- a/public/view/submitf.html
+++ b/public/view/submitf.html
@@ -57,7 +57,7 @@
                         </thead>
 
                         <% for(var i=0; i<intel.length; i++) {
-                             if (!intel[i].deleted) {
+                        if (!intel[i].deleted) {
                         %>
                         <tr id='<%= intel[i]._id %>'> 
                             <td><%= intel[i].Group %></td>
@@ -66,7 +66,7 @@
                             <td><%= intel[i].FC %></td>
                             <td><%= intel[i].Doctrine %></td>
                             <td><%= intel[i].Comment %></td>
-                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
+                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button onclick="rmop(<%= intel[i]._id %>) style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
                         </tr>
                         <% } %>
                         <% } %>
@@ -234,6 +234,12 @@
         $('#eDoctrine').val(intel.Doctrine);
         $('#eComment').val(intel.Comment);
         $('#e_id').val(intel._id);
+    }
+
+    function rmop(id) {
+        $.post( "/oprm",{_id : id} , function( data ) {
+          console.log(data);
+      });
     }
     $(document).ready( function () {
         $('#Date').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
