--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -75,7 +75,7 @@
                             <td><%= intel[i].Comment %></td>
                             <% if (role == 3) { %>
                             <td><%= intel[i].Author_Name %></td>
-                           <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
+                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button onclick="rmop('<%= intel[i]._id %>')" style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
                             <% } %>
                         </tr>
                         <% } %>
@@ -246,6 +246,16 @@
         $('#eComment').val(intel.Comment);
         $('#e_id').val(intel._id);
     }
+
+        function rmop(id) {
+        $.post( "/oprm",{_id : id} , function( data ) {
+          if (data == 200) {
+            $("#" + id).remove();
+          }
+      });
+    }
+    
+
     $(document).ready( function () {
         $('#Date').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
         $('#eDate').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
