--- a/public/view/submitf.html
+++ b/public/view/submitf.html
@@ -43,7 +43,7 @@
             <h2 class="mb-4">Intel</h2>
             <div class="card mb-4">
                 <div class="card-body">
-                    <table id="table_id" class="display">
+                    <table id="table_id" data-order='[[ 2, "asc" ]]' class="display">
                         <thead>
                             <tr>
                                 <th>Group</th>
