--- a/public/view/archive.html
+++ b/public/view/archive.html
@@ -263,11 +263,7 @@
         $('#eDate').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
         $('#table_id').DataTable({
             responsive: true,
-            colReorder: true,
-            buttons: [
-        'copy', 'excel', 'pdf'
-    ]
-
+            colReorder: true
         });
 
     } );
