--- a/public/view/archive.html
+++ b/public/view/archive.html
@@ -264,10 +264,7 @@
         $('#table_id').DataTable({
             responsive: true,
             colReorder: true,
-            keys: true,
-            buttons: [
-        'copy', 'excel', 'pdf'
-    ]
+            keys: true
         });
 
     } );
