--- a/public/view/archive.html
+++ b/public/view/archive.html
@@ -263,8 +263,7 @@
         $('#eDate').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
         $('#table_id').DataTable({
             responsive: true,
-            colReorder: true,
-            keys: true
+            colReorder: true
         });
 
     } );
