--- a/public/view/archive.html
+++ b/public/view/archive.html
@@ -262,8 +262,7 @@
         $('#Date').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
         $('#eDate').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
         $('#table_id').DataTable({
-            responsive: true,
-            colReorder: true
+            responsive: true
         });
 
     } );
