add responsiv table

--- a/public/view/submitf.html
+++ b/public/view/submitf.html
@@ -240,15 +240,16 @@
         $.post( "/oprm",{_id : id} , function( data ) {
           if (data == "OK") {
             $("#" + id).remove();
-          }
-      });
+        }
+    });
     }
 
     $(document).ready( function() {
         $('#Date').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
         $('#eDate').bootstrapMaterialDatePicker({ format : 'DD/MM/YY - HH:mm' });
-        $('#table_id').DataTable();
-
+        $('#table_id').DataTable({
+            responsive: true
+        });
     } );
 </script>
 
