change icon + remove action on archiv

--- a/public/view/admin.html
+++ b/public/view/admin.html
@@ -38,7 +38,7 @@
             <% } %>
             <li><a href="/intel"><i class="fa fa-fw fa-info"></i> Intel</a></li>
             <% if (role == 3) { %>
-            <li><a href="/archive"><i class="fa fa-fw fa-users"></i> Archived intel</a></li>
+            <li><a href="/archive"><i class="fa fa-fw fa-archive"></i> Archived intel</a></li>
             <% } %>
         </ul>
     </div>
