--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -39,7 +39,7 @@
                 <% } %>
                 <li><a href="/intel"><i class="fa fa-fw fa-info"></i> Intel</a></li>
                 <% if (role == 3) { %>
-                <li><a href="/archive"><i class="fa fa-fw fa-users"></i> Archived intel</a></li>
+                <li><a href="/archive"><i class="fa fa-fw fa-archive"></i> Archived intel</a></li>
                 <% } %>
                 <li><a href="#"   data-toggle="modal" data-target="#addop"><i  data-toggle="modal" data-target="#addop" class="fa fa-fw fa-space-shuttle"></i> Add OP</a></li>
             </ul>
