--- a/public/view/archive.html
+++ b/public/view/archive.html
@@ -63,10 +63,8 @@
                             </tr>
                         </thead>
 
-                        <% for(var i=0; i<intel.length; i++) { 
-                        if (intel[i].deleted) {
-                        %>
-
+                        <% for(var i=0; i<intel.length; i++) { %>
+  
                         <tr id='<%= intel[i]._id %>'> 
                             <td><%= intel[i].Group %></td>
                             <td><%= intel[i].Type %></td>
