--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -65,10 +65,7 @@
                             </tr>
                         </thead>
 
-                        <% for(var i=0; i<intel.length; i++) { 
-                        if (!intel[i].deleted) {
-                        %>
-
+                        <% for(var i=0; i<intel.length; i++) { %>
                         <tr id='<%= intel[i]._id %>'> 
                             <td><%= intel[i].Group %></td>
                             <td><%= intel[i].Type %></td>
@@ -81,7 +78,6 @@
                             <td style="min-width: 120px;" class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button onclick="rmop('<%= intel[i]._id %>')" style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
                             <% } %>
                         </tr>
-                        <% } %>
                         <% } %>
                         <tbody>
 
